--- a/themes/zuzu/layouts/index.html
+++ b/themes/zuzu/layouts/index.html
@@ -1,12 +1,12 @@
 {{ define "main" }}
 <main aria-role="main">
-    <section>
+    <section class="narrow">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-12 text-center">
-                    <div class="main-title-wrapper">
+                    <div class="main-title-wrapper mb-2">
                         <img src={{.Site.Data.link.common.sparkle}} class="custom-icon-40" alt="sparkle" />
-                        <h1 class="main-title">{{.Params.title}}</h1>
+                        <h1 class="main-title">주주 리걸과 함께라면 <span class="underline-magical">셀프 등기와 등기 대행</span> 모두 <br/> 전보다 훨씬 더 <span class="underline-magical">편리하고 투명</span>해질거예요</h1>
                         <img src={{.Site.Data.link.common.sparkle}} class="custom-icon-40 flip-horizontal"
                             alt="sparkle" />
                     </div>
