--- a/themes/zuzu/layouts/partials/header/banner.html
+++ b/themes/zuzu/layouts/partials/header/banner.html
@@ -1,7 +1,7 @@
 <div class="banner" role="banner">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 py-1">
+            <div class="col-md-12">
                 <span class="badge badge-primary">Update</span>
                 <span class=banner-summary>{{.Site.Data.banner.banner.title}}</span>
             </div>
