--- a/themes/zuzu/layouts/partials/header/header.html
+++ b/themes/zuzu/layouts/partials/header/header.html
@@ -35,9 +35,9 @@
       </ul>
       <form class="form-inline">
         <button type="button" onclick="location.href={{ .Site.Params.loginURL }}"
-          class="button button-small button-tertiary">{{.Site.Data.label.button.login}}</button>
+          class="button button-medium button-secondary">{{.Site.Data.label.button.login}}</button>
       <button type="button" onclick="location.href={{ .Site.Params.signupURL }}"
-          class="button button-small button-tertiary">{{.Site.Data.label.button.signup}}</button>
+          class="button button-medium button-primary">{{.Site.Data.label.button.signup}}</button>
       </form>
     </div>
   </div>
