--- a/themes/zuzu/layouts/partials/section/cta.html
+++ b/themes/zuzu/layouts/partials/section/cta.html
@@ -5,7 +5,7 @@
             <img src="/assets/images/pack/UnboxingDoodle.svg" alt="콜투액션이미지"
                 data-aos="fade-up" data-aos-anchor=".cta" class="cta-image">
             <h2 class="section-title">
-                <span class="highlight">정말로!</span>
+                <span class="underline-magical">정말로!</span>
                 {{.Site.Data.section.cta.title}}
             </h2>
             <h3 class="section-subtitle">
