--- a/themes/zuzu/layouts/partials/section/customer.html
+++ b/themes/zuzu/layouts/partials/section/customer.html
@@ -4,7 +4,7 @@
             <img src="/assets/images/pack/GroovySittingDoodle.svg" class="section-anchor-image"
         alt="customer-image-doodle">
                 <h2 class="section-title text-center">
-                    6개월 만에 <span data-countup class="highlight">1447</span>명이 넘는 대표님이 가입하셨어요
+                    6개월 만에 <span data-countup class="underline-magical">1447</span>명이 넘는 대표님이 가입하셨어요
                 </h2>
                 <h3 class="section-subtitle text-center">직접 전달해주신 생생한 리뷰를 들어보세요<h3>
         </div>
