--- a/themes/zuzu/layouts/partials/section/main/feature.html
+++ b/themes/zuzu/layouts/partials/section/main/feature.html
@@ -1,59 +1,78 @@
-<!-- <section class="section feature" id="feature">
-  <div class="container">
-    <div class="row">
-      <h3 class="section-subtitle font-weight-bolder">
-        <b>주주 리걸 실제로 이렇게 돌아가요</b>
-      </h3>
-    </div>   -->
-        <div class="row justify-content-center">
-          <div class="col-md-10 my-4">
-            <ul class="nav nav-pills" id="v-pills-tab" role="tablist">
-            <li>
-              <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
-              href="#v-pills-home" role="tab" aria-controls="v-pills-home"
-              aria-selected="true"><i data-feather="gift" stroke-width="3"
-                width="20"></i>
-              <span>
-                스톡옵션
-              </span></a>
-            </li>
-    
-             <li>
-              <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
-              href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
-              aria-selected="false"><i data-feather="dollar-sign" stroke-width="3"
-                width="20"></i>
-              <span>
-                유상증자
-              </span></a>
-             </li>
-    
-              <li>
-                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
-                href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
-                aria-selected="false"><i data-feather="users" stroke-width="3"
-                  width="20"></i>
-                <span>임원 변경</span></a>
-              </li>
-              </ul>
-          </div>
+<div class="row justify-content-center">
 
-          <div class="col-md-10">
-            <!-- STOCKOPTION DETAIL STARTS -->
-            <div class="tab-content" id="v-pills-tabContent">
-              <div class="tab-pane fade show active" id="v-pills-home"
-                role="tabpanel" aria-labelledby="v-pills-home-tab">
-                <iframe data-aos="fade-up" src="https://player.vimeo.com/video/500027375" width="100%"
-                  height="700" frameborder="0" allow="autoplay; fullscreen"
-                  allowfullscreen></iframe></div>
-            </div>
-            <!-- STOCKOPTION DETAIL ENDS -->
-          </div>
+  <div class="col-md-12 my-4">
+    <ul class="nav nav-pills" id="feature-tab" role="tablist">
+      <li>
+        <a class="nav-item nav-link active" id="nav-newissue-tab" data-toggle="tab"
+          href="#nav-newissue" role="tab" aria-controls="nav-newissue"
+          aria-selected="false">
+          <i data-feather="star" stroke-width="3" width="20"></i>
+          <span>
+            유상증자
+          </span>
+        </a>
+      </li>
 
-        </div>
+      <li>
+        <a class="nav-item nav-link" id="nav-directorchange-tab" data-toggle="tab"
+          href="#nav-directorchange" role="tab" aria-controls="nav-directorchange"
+          aria-selected="false">
+          <i data-feather="users" stroke-width="3" width="20"></i>
+          <span>
+            임원 변경
+          </span>
+        </a>
+      </li>
+
+      <li>
+        <a class="nav-item nav-link" id="nav-purposechange-tab"
+          data-toggle="tab" href="#nav-purposechange" role="tab"
+          aria-controls="nav-purposechange" aria-selected="true">
+          <i data-feather="compass" stroke-width="3" width="20"></i>
+          <span>
+            사업 목적 변경
+          </span>
+        </a>
+      </li>
+
+      <li>
+        <a class="nav-item nav-link" id="nav-option-tab"
+          data-toggle="tab" href="#nav-option" role="tab"
+          aria-controls="nav-option" aria-selected="true">
+          <i data-feather="gift" stroke-width="3" width="20"></i>
+          <span>
+            스톡옵션
+          </span>
+        </a>
+      </li>
       
+    </ul>
+  </div>
 
+  <div class="col-md-12">
+    <div class="tab-content" id="nav-tabContent">
+      
+      <div class="tab-pane fade show active" id="nav-option" role="tabpanel"
+        aria-labelledby="nav-option-tab">
+        <iframe src="https://player.vimeo.com/video/500367978" width="640" height="400" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      
+      <div class="tab-pane fade" id="nav-newissue" role="tabpanel"
+        aria-labelledby="nav-newissue-tab">
+        <iframe src="https://player.vimeo.com/video/500341592" width="640" height="400" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+      </div>
 
-    
-  <!-- </div>
-</section> -->
+      <div class="tab-pane fade" id="nav-directorchange" role="tabpanel"
+      aria-labelledby="nav-directorchange-tab">
+      <iframe src="https://player.vimeo.com/video/500027375" width="640" height="400" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div class="tab-pane fade" id="nav-purposechange" role="tabpanel"
+      aria-labelledby="nav-purposechange-tab">
+      <iframe src="https://player.vimeo.com/video/500374592" width="640" height="480" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    </div>
+  </div>
+
+</div>
