--- a/themes/zuzu/layouts/shortcodes/voucher/step.html
+++ b/themes/zuzu/layouts/shortcodes/voucher/step.html
@@ -43,16 +43,26 @@
                                 class="custom-icon-80 panel-medium-image">
                             <div class="panel-medium-text-wrapper">
                                 <h5 class="panel-medium-title">
+                                    <span class="underline-magical">
                                     조금 더 자세히 알고 싶으세요?
+                                </span>
                                 </h5>
-                                <p class="panel-medium-subtitle">
+                                <p class="panel-medium-subtitle mt-3">
                                     조미선 Customer Service & Operation Lead와
                                     상담해보세요.
                                 </p>
                                 <div class="mt-3">
-                                    <a href="tel:010-5950-3944"
-                                        style="margin-right:0.5rem;">010-5950-3944</a>
-                                    <a href="tel:010-3931-6788">010-3931-6788</a>
+                                    <a href="tel:010-5950-3944" class="no-decoration no-underline">
+                                    <span class="button button-medium button-secondary">
+                                        연락하기1
+                                    <i data-feather="phone" width="16"></i>
+                                </span>
+                                    </a>
+                                    <a href="tel:010-3931-6788" style="font-weight: 500;" class="no-decoration no-underline">
+                                        <span class="button button-medium button-secondary">연락하기2
+                                            <i data-feather="phone" width="16"></i>
+                                        </span></a>
+                                    </a>
                                 </div>
                             </div>
                         </div>
