--- a/docs/scss/main.scss
+++ b/docs/scss/main.scss
@@ -7,5 +7,5 @@
 @import "components/panel", "components/link", "components/button", "components/link", "components/navbar",
     "components/card", "components/icon", "components/banner", "components/dropdown", "components/lottieplayer",
     "components/reveal-item", "components/badge", "components/table", "components/input", "components/form",
-    "components/post";
+    "components/post", "components/video";
 @import "layout/footer", "layout/cta";
