--- a/themes/zuzu/layouts/partials/footer/footer.html
+++ b/themes/zuzu/layouts/partials/footer/footer.html
@@ -1,7 +1,7 @@
 
 {{/* TO DO: DON'T HARDCORD FOOTER LIST ITEMS */}}
 
-<footer>
+<footer class="bg-light">
   <div class="container">
     <div class="footer-inner">
       <div class="row">
