--- a/themes/zuzu/layouts/shortcodes/pricing/pricing.html
+++ b/themes/zuzu/layouts/shortcodes/pricing/pricing.html
@@ -5,7 +5,7 @@
                 <h2 class="section-title">요금제</h2>
                 <h3 class="section-subtitle">베이직과 프리미엄 중 원하시는 요금제를 선택하세요</h3>
                 <div class="table-responsive">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered" data-aos="fade-up">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col"></th>
@@ -42,7 +42,7 @@
                     발생해요
                 </h3>
                 <div class="table-responsive">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered" data-aos="fade-up">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col"></th>
@@ -130,7 +130,7 @@
         <div class="row justify-content-center">
             <div class="col-md-10">
                 <div class="table-responsive">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered" data-aos="fade-up">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col"></th>
@@ -157,7 +157,7 @@
             <div class="col-md-10">
                 <h2 class="section-title">의결 문서 생성 비용</h2>
                 <div class="table-responsive">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered" data-aos="fade-up">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col"></th>
@@ -206,7 +206,7 @@
         <div class="row justify-content-center">
             <div class="col-md-10">
                 <div class="table-responsive">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered" data-aos="fade-up">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col"></th>
