--- a/themes/zuzu/static/css/main.css
+++ b/themes/zuzu/static/css/main.css
@@ -35,7 +35,7 @@ h1 {
   font-size: 3.052rem;
   font-weight: 700;
   letter-spacing: -0.05rem;
-  color: #2e2e31;
+  color: #3d3d3c;
 }
 
 h2 {
@@ -96,14 +96,34 @@ body {
   margin-top: 1.5rem;
 }
 
-blockquote {
-  background-color: #eeeeee;
-  padding: 0.75rem;
-  border-radius: 0.1875rem;
+.flex-gap-8 > * + * {
+  margin-left: 0.75rem;
+}
+
+.flex-gap-16 > * + * {
+  margin-left: 1.5rem;
+}
+
+@media screen and (max-width: 600px) {
+  .down-sm-width-100.down-sm-width-100 {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .down-sm-width-100 + .down-sm-width-100 {
+    margin-top: 1.5rem;
+  }
 }
 
 *[onclick] {
   cursor: pointer;
+}
+
+blockquote {
+  background-color: #eeeeee;
+  padding: 0.75rem;
+  border-radius: 0.1875rem;
 }
 
 .bordered, .custom-icon-bordered {
@@ -118,8 +138,17 @@ blockquote {
   -webkit-text-fill-color: transparent;
 }
 
-.flex-gap-16 > * + * {
-  margin-left: 1.5rem;
+.underline-magical {
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: 0 88%;
+  -webkit-transition: background-size 0.25s ease-in;
+  transition: background-size 0.25s ease-in;
+}
+
+.underline-magical:hover {
+  background-size: 100% 88%;
 }
 
 img.fluid-100 {
@@ -145,19 +174,7 @@ img.bordered, img.custom-icon-bordered {
   border-radius: 0.5625rem;
 }
 
-@media screen and (max-width: 600px) {
-  .down-sm-width-100.down-sm-width-100 {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .down-sm-width-100 + .down-sm-width-100 {
-    margin-top: 1.5rem;
-  }
-}
-
-span.highlight {
+.highlight {
   font-weight: bolder;
   background: linear-gradient(104deg, rgba(130, 255, 173, 0) 0.9%, #82ffad 2.4%, rgba(130, 255, 173, 0.5) 5.8%, rgba(130, 255, 173, 0.1) 93%, rgba(130, 255, 173, 0.7) 96%, rgba(130, 255, 255, 0) 98%), linear-gradient(183deg, rgba(130, 255, 173, 0) 0%, rgba(130, 255, 173, 0.3) 7.9%, rgba(130, 255, 173, 0) 15%);
   padding: 0.6em 13.7px;
@@ -174,6 +191,18 @@ span.highlight {
           transform-style: preserve-3d;
 }
 
+a.no-underline.no-underline {
+  text-decoration: none;
+}
+
+a.no-underline.no-underline:hover {
+  text-decoration: none;
+}
+
+iframe {
+  border-radius: 0.5625rem;
+}
+
 @media screen and (max-width: 768px) {
   *[class^="col-md"] + *[class^="col-md"] {
     margin-top: 2.25rem;
@@ -183,7 +212,7 @@ span.highlight {
 section {
   position: relative;
   z-index: 1;
-  padding: 7.5rem 3rem;
+  padding: 10.5rem 3rem;
 }
 
 @media screen and (max-width: 600px) {
@@ -192,17 +221,26 @@ section {
   }
 }
 
+section.narrow {
+  padding: 6rem 3rem;
+}
+
 section .main-title {
   margin-bottom: 0.75rem;
   margin-top: 0;
   font-size: 3.052rem;
   font-weight: 900;
   letter-spacing: -0.04rem;
-  color: #2e2e31;
-  line-height: 1.4;
-  color: #2e2e31;
+  color: #3d3d3c;
+  line-height: 1.5;
+  color: #3d3d3c;
   word-wrap: break-word;
-  word-break: break-all;
+}
+
+@media screen and (max-width: 600px) {
+  section .main-title br {
+    display: none;
+  }
 }
 
 section .main-title-wrapper {
@@ -264,7 +302,7 @@ section .section-title {
   letter-spacing: -0.03rem;
   line-height: 1.75;
   text-align: center;
-  color: #2e2e31;
+  color: #3d3d3c;
 }
 
 section .section-title-wrapper {
@@ -407,7 +445,7 @@ section.background-light {
   font-weight: 500;
   letter-spacing: -0.02rem;
   line-height: 1;
-  color: #2e2e31;
+  color: #3d3d3c;
 }
 
 .panel-medium-subtitle {
@@ -560,6 +598,33 @@ a.no-decoration:hover, footer .footer-group-list a:hover, footer .footer-group-s
   color: #ffffff;
   background: -webkit-gradient(linear, left top, right top, from(#36b06a), color-stop(84.16%, #43a5ba));
   background: linear-gradient(90deg, #36b06a 0%, #43a5ba 84.16%);
+  background-size: 400% 400%;
+  -webkit-animation: GradientAnimation 6s ease-out infinite alternate;
+          animation: GradientAnimation 6s ease-out infinite alternate;
+}
+
+@-webkit-keyframes GradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes GradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .button-secondary {
@@ -596,7 +661,7 @@ nav.main-nav .navbar-inner {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0.75rem 0;
+  padding: 1.5rem 0;
 }
 
 @media screen and (max-width: 600px) {
@@ -629,9 +694,9 @@ nav.main-nav .navbar-collapse {
 }
 
 nav.main-nav .nav-item .nav-link {
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 400;
-  letter-spacing: 0.01rem;
+  letter-spacing: -0.01rem;
   line-height: 1;
   color: #535353;
   padding: 0.375rem 0.75rem;
@@ -653,9 +718,9 @@ nav.main-nav .nav-item .nav-link {
 }
 
 nav.main-nav .active {
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 700;
-  letter-spacing: 0.01rem;
+  letter-spacing: -0.01rem;
   line-height: 1;
   color: #4aa570;
 }
@@ -819,7 +884,7 @@ nav.main-nav .active .nav-link {
   font-weight: 400;
   letter-spacing: -0.01rem;
   line-height: 1.75;
-  color: #2e2e31;
+  color: #3d3d3c;
 }
 
 @media screen and (max-width: 600px) {
@@ -973,7 +1038,7 @@ nav.main-nav .active .nav-link {
 }
 
 .banner {
-  padding: 0.75rem 2.25rem;
+  padding: 0.75rem 0.75rem;
   background: rgba(74, 165, 112, 0.2);
   border-top: 1px solid #e6e6e6;
   color: #408f61;
@@ -1024,11 +1089,11 @@ nav.main-nav .active .nav-link {
 }
 
 .custom-dropdown-menu .custom-dropdown-item {
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 400;
-  letter-spacing: 0.01rem;
+  letter-spacing: -0.01rem;
   line-height: 1;
-  padding: 0.75rem 2.25rem;
+  padding: 1.125rem 2.25rem;
   color: #535353;
 }
 
@@ -1151,7 +1216,7 @@ nav.main-nav .active .nav-link {
 }
 
 .reveal-item-content {
-  font-size: 1.25rem;
+  font-size: 1.563rem;
   font-weight: 700;
   letter-spacing: -0.02rem;
   line-height: 1.5;
@@ -1308,7 +1373,7 @@ nav.main-nav .active .nav-link {
   font-weight: 500;
   letter-spacing: -0.01rem;
   line-height: 1.75;
-  color: #2e2e31;
+  color: #3d3d3c;
   word-wrap: break-word;
   vertical-align: middle;
 }
@@ -1426,7 +1491,7 @@ footer .form-title {
   letter-spacing: -0.01rem;
   line-height: 1.75;
   margin-bottom: 0.5625rem;
-  color: #2e2e31;
+  color: #3d3d3c;
 }
 
 @media screen and (max-width: 600px) {
@@ -1537,7 +1602,6 @@ footer .form-subtitle {
 
 footer {
   width: 100%;
-  background-color: #eeeeee;
 }
 
 footer .footer-inner {
@@ -1562,7 +1626,7 @@ footer .footer-group .footer-group-social-group-list p {
 
 footer .footer-group-title {
   margin-bottom: 0.375rem;
-  color: #2e2e31;
+  color: #3d3d3c;
   font-size: 1rem;
   font-weight: 500;
   letter-spacing: -0.01rem;
