--- a/themes/zuzu/static/scss/base/_global.scss
+++ b/themes/zuzu/static/scss/base/_global.scss
@@ -12,15 +12,38 @@ body {
 .row > .col-md-6:nth-child(n + 3) {
   margin-top: $baseUnit * 2;
 }
+.flex-gap-8 {
+  & > * + * {
+    margin-left: $baseUnit;
+  }
+}
+
+.flex-gap-16 {
+  & > * + * {
+    margin-left: $baseUnit * 2;
+  }
+}
+.down-sm-width-100 {
+  &.down-sm-width-100 {
+    @include media-break-point-down {
+      width: 100%;
+    }
+  }
+  & + & {
+    @include media-break-point-down {
+      margin-top: $baseUnit * 2;
+    }
+  }
+}
 
 // TAG AND COMPONENT LEVEL
+*[onclick] {
+  cursor: pointer;
+}
 blockquote {
   background-color: lighten($hr, 3);
   padding: $baseUnit;
   border-radius: $baseUnit * 0.25;
-}
-*[onclick] {
-  cursor: pointer;
 }
 .bordered {
   border: 1px solid $hr;
@@ -31,9 +54,14 @@ blockquote {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.flex-gap-16 {
-  & > * + * {
-    margin-left: $baseUnit * 2;
+.underline-magical {
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: 0 88%;
+  transition: background-size 0.25s ease-in;
+  &:hover {
+    background-size: 100% 88%;
   }
 }
 
@@ -61,20 +89,7 @@ img {
   }
 }
 
-.down-sm-width-100 {
-  &.down-sm-width-100 {
-    @include media-break-point-down {
-      width: 100%;
-    }
-  }
-  & + & {
-    @include media-break-point-down {
-      margin-top: $baseUnit * 2;
-    }
-  }
-}
-
-span.highlight {
+.highlight {
   font-weight: bolder;
   background: linear-gradient(
       104deg,
@@ -97,6 +112,17 @@ span.highlight {
 .flip-horizontal {
   transform: rotateY(180deg);
   transform-style: preserve-3d;
+}
+
+a.no-underline.no-underline {
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+iframe {
+  border-radius: $baseUnit * 0.75;
 }
 
 // MEDIAQUERY
