--- a/themes/zuzu/layouts/partials/footer/footer.html
+++ b/themes/zuzu/layouts/partials/footer/footer.html
@@ -44,9 +44,6 @@
               <a target="_blank" href="https://delivery.zuzu.network" title="주주
                 딜리버리 바로가기">주주 딜리버리</a>
             </li>
-            <li class="footer-group-list">
-              <a target="_blank" href="#" title="주주 패밀리 서비스 소개서">주주 패밀리 서비스 소개서</a>
-            </li>
           </ul>
         </div>
         <div class="col-md-3">
@@ -90,17 +87,16 @@
               2017-서울강남-04048 호
           </li>
           <li class="footer-group-company-info">
-              주소: 서울시 강남구 테헤란로 129 7층 | 웹사이트: https://kodebox.io
-
+            서울시 강남구 테헤란로 129 732호| 웹사이트: https://kodebox.io
           </li>
           <li class="footer-group-company-info">
             Copyright {{ now.Format "2006" }} © Kodebox. All Rights Reserved.
           </li>
         </ul>
         <ul class="footer-group-social">
-          <li class="footer-group-social-group-list"><a href="" title="주주 페이스북"><span><i
+          <li class="footer-group-social-group-list"><a href="https://facebook.com/zuzunetwork" title="주주 페이스북" target="_blank"><span><i
                   data-feather="facebook" width="14"></i></span></a></li>
-          <li class="footer-group-social-group-list"><a href="" title="주주 유튜브"><span><i
+          <li class="footer-group-social-group-list"><a href="https://www.youtube.com/channel/UCNnegfJm9GXzqqvhCljfmQg" title="주주 유튜브" target="_blank"><span><i
                   data-feather="youtube" width="14"></i></span></a></li>
         </ul>
       </div>
