--- a/themes/zuzu/layouts/partials/section/main/feature.html
+++ b/themes/zuzu/layouts/partials/section/main/feature.html
@@ -41,7 +41,7 @@
           aria-controls="nav-option" aria-selected="true">
           <i data-feather="gift" stroke-width="3" width="20"></i>
           <span>
-            스톡옵션
+            스톡옵션 부여
           </span>
         </a>
       </li>
