--- a/themes/zuzu/layouts/partials/section/voucher.html
+++ b/themes/zuzu/layouts/partials/section/voucher.html
@@ -1,6 +1,6 @@
 <div id="k-voucher" class="container panel-medium" data-aos="zoom-in"
     data-aos-ancho="panel-medium">
-    <div class="col-md-8 d-flex align-items-center">
+    <div class="col-md-10 d-flex align-items-center">
         <img src="/assets/images/pack/ZombieingDoodleWhite.svg" alt="비대면바우처"
             class="custom-icon-160 panel-medium-image">
         <div class="panel-medium-text-wrapper">
@@ -12,12 +12,8 @@
             </p>
         </div>
     </div>
-    <div class="col-md-4">
-        <button class="button button-secondary button-medium">
-            <span>바우처 사용 방법</span>
-            <i data-feather="chevron-right" width="16"></i>
-        </button>
-        <button class="button button-primary button-medium">
+    <div class="col-md-2">
+        <button class="button button-primary button-medium" onclick="window.open('voucher/')">
             <span>쿠폰 구매하기</span>
             <i data-feather="chevron-right" width="16"></i>
         </button>
