--- a/themes/zuzu/layouts/shortcodes/pricing/pricing.html
+++ b/themes/zuzu/layouts/shortcodes/pricing/pricing.html
@@ -2,10 +2,14 @@
     <div class="container text-center">
         <div class="row justify-content-center">
             <div class="col-md-10">
-                <h2 class="section-title">요금제</h2>
+                <h2 class="section-title">
+                    <span class="underline-magical">
+                        요금제
+                    </span>
+                </h2>
                 <h3 class="section-subtitle">베이직과 프리미엄 중 원하시는 요금제를 선택하세요</h3>
                 <div class="table-responsive">
-                    <table class="table table-bordered" data-aos="fade-up">
+                    <table class="table table-bordered" data-aos="fade-out">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col"></th>
@@ -37,12 +41,16 @@
     <div class="container text-center">
         <div class="row justify-content-center">
             <div class="col-md-10">
-                <h2 class="section-title">등기 문서 생성 비용</h2>
+                <h2 class="section-title">
+                    <span class="underline-magical">
+                        등기 문서 생성 비용
+                    </span>
+                </h2>
                 <h3 class="section-subtitle">요금제 가격은 셀프 등기 기준이며 등기 대행 시에는 추가 비용이
                     발생해요
                 </h3>
                 <div class="table-responsive">
-                    <table class="table table-bordered" data-aos="fade-up">
+                    <table class="table table-bordered" data-aos="fade-out">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col"></th>
@@ -126,11 +134,15 @@
     </div>
 
     <div class="container text-center">
-        <h2 class="section-title">법인 설립</h2>
+        <h2 class="section-title">
+            <span class="underline-magical">
+                법인 설립
+            </span>
+        </h2>
         <div class="row justify-content-center">
             <div class="col-md-10">
                 <div class="table-responsive">
-                    <table class="table table-bordered" data-aos="fade-up">
+                    <table class="table table-bordered" data-aos="fade-out">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col"></th>
@@ -155,9 +167,11 @@
     <div class="container text-center">
         <div class="row justify-content-center">
             <div class="col-md-10">
-                <h2 class="section-title">의결 문서 생성 비용</h2>
+                <h2 class="section-title">
+                    <span class="underline-magical">의결 문서 생성 비용</span>
+                </h2>
                 <div class="table-responsive">
-                    <table class="table table-bordered" data-aos="fade-up">
+                    <table class="table table-bordered" data-aos="fade-out">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col"></th>
@@ -181,10 +195,10 @@
                                 <th scope="row">임원 보수 결정</th>
                             </tr>
                             <tr>
-                                <th scope="row">중간 배당 (지원 예정)</th>
+                                <th scope="row">중간 배당  (등기 대행만 가능)</th>
                             </tr>
                             <tr>
-                                <th scope="row">이익 배당 (지원 예정)</th>
+                                <th scope="row">이익 배당  (등기 대행만 가능)</th>
                             </tr>
                             <tr>
                                 <th scope="row">스톡옵션 부여 및 계약서 생성
@@ -202,11 +216,13 @@
     </div>
 
     <div class="container text-center">
-        <h2 class="section-title">추가 기능</h2>
+        <h2 class="section-title">
+            <span class="underline-magical">추가 기능</span>
+        </h2>
         <div class="row justify-content-center">
             <div class="col-md-10">
                 <div class="table-responsive">
-                    <table class="table table-bordered" data-aos="fade-up">
+                    <table class="table table-bordered" data-aos="fade-out">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col"></th>
