--- a/themes/zuzu/layouts/partials/section/main/jumbotron.html
+++ b/themes/zuzu/layouts/partials/section/main/jumbotron.html
@@ -3,7 +3,7 @@
         <div class="row align-items-center">
             <div class="col-md-6 text-left">
                 <div class="main">
-                    <img src={{.Site.Data.link.common.sparkle}} class="custom-icon-32" alt="sparkle" />
+                    <img src={{.Site.Data.link.common.sparkle}} class="custom-icon-48" alt="sparkle"  style="mix-blend-mode: multiply;"/>
                     <h1 class="main-title" class="text-left">{{.Params.title}}</h1>
                     <h2 class="main-subtitle w-75 word-wrap">{{.Params.subtitle}}</h2>
                 </div>
