--- a/themes/zuzu/layouts/partials/footer/footer.html
+++ b/themes/zuzu/layouts/partials/footer/footer.html
@@ -52,9 +52,10 @@
               이용약관 및 개인정보처리방침
             </li>
             <li class="footer-group-list">
-              <a target="_blank" href={{"term-and-privacy/term" | absURL}} title="이용약관">이용약관</a></li>
+              <a target="_blank" href={{" term-and-privacy/term" | absURL}}
+                title="이용약관">이용약관</a></li>
             <li class="footer-group-list">
-              <a target="_blank" href={{"term-and-privacy/privacypolicy" | absURL}} title="개인정보처리방침">개인정보처리방침</a>
+              <a target="_blank" href={{" term-and-privacy/privacypolicy" | absURL}} title="개인정보처리방침">개인정보처리방침</a>
             </li>
           </ul>
         </div>
@@ -83,8 +84,8 @@
             (주) 코드박스 | Kodebox Co. , Ltd.
           </li>
           <li class="footer-group-company-info">
-              대표: 서광열 | 사업자등록번호: 107-88-42217 | 통신판매업번호:
-              2017-서울강남-04048 호
+            대표: 서광열 | 사업자등록번호: 107-88-42217 | 통신판매업번호:
+            2017-서울강남-04048 호
           </li>
           <li class="footer-group-company-info">
             서울시 강남구 테헤란로 129 732호| 웹사이트: https://kodebox.io
@@ -94,9 +95,13 @@
           </li>
         </ul>
         <ul class="footer-group-social">
-          <li class="footer-group-social-group-list"><a href="https://facebook.com/zuzunetwork" title="주주 페이스북" target="_blank"><span><i
+          <li class="footer-group-social-group-list"><a
+              href="https://facebook.com/zuzunetwork" title="주주 페이스북"
+              target="_blank"><span><i
                   data-feather="facebook" width="14"></i></span></a></li>
-          <li class="footer-group-social-group-list"><a href="https://www.youtube.com/channel/UCNnegfJm9GXzqqvhCljfmQg" title="주주 유튜브" target="_blank"><span><i
+          <li class="footer-group-social-group-list"><a
+              href="https://www.youtube.com/channel/UCNnegfJm9GXzqqvhCljfmQg"
+              title="주주 유튜브" target="_blank"><span><i
                   data-feather="youtube" width="14"></i></span></a></li>
         </ul>
       </div>
