--- a/themes/zuzu/layouts/partials/section/agenda-support.html
+++ b/themes/zuzu/layouts/partials/section/agenda-support.html
@@ -1,3 +1,4 @@
+{{ if .Params.supportAgendaSubtitle }}    
 <section>
     <div class="container">
         <div class="row">
@@ -9,16 +10,16 @@
             <h3 class="section-subtitle">{{.Params.supportAgendaSubtitle}}</h3>
         </div>
         <div class="row">
-            <div class="row reveal-row-wrapper">
+            <div class="row">
                 {{ range .Params.supportAgendaItem }}
-                <div class="col-md-6">
+                <div class="col-md-4 py-3">
                     <div class="reveal-item align-items-center flex-gap-8
-                        bg-light" data-aos="fade-out">
+                        bg-dark" data-aos="fade-out">
                         <div>
-                            <img src="/assets/images/sparkle.gif" alt="spakrle"
-                                class="custom-icon-24">
+                            <img src="/assets/images/sparkle.png" alt="spakrle"
+                                class="custom-icon-24" style="mix-blend-mode: screen;">
                         </div>
-                        <h5>
+                        <h5 class="py-2 text-white">
                             <span>{{ index . 0}}</span>
                         </h5>
                     </div>
@@ -27,13 +28,14 @@
             </div>
         </div>
     </section>
+{{end}}
 
     <section>
         <div class="container">
             <div class="row">
                 <h2 class="section-title">{{.Title}}을 <span
                         class="underline-magical">
-                        영상으로 먼저 만나보세요.
+                        영상으로 먼저 만나보세요
                     </span></h2>
                 <h3 class="section-subtitle">{{.Params.videoSubtitle}}
                 </h3>
@@ -57,7 +59,7 @@
             <div class="row">
                 <h2 class="section-title">아래 문서가 <span
                         class="underline-magical">상법과 정관에 따라 자동</span>으로 생성되어요</h2>
-                <h3 class="section-subtitle">{{.Params.generatedDocumentSubtitle}}</h3>
+                <h3 class="section-subtitle">물론 눈 깜짝할 사이에 매우 정확하게 말이죠!</h3>
             </div>
             <div class="row">
                 {{ range .Params.generatedDocumentItem }}
@@ -71,6 +73,22 @@
                     </div>
                 </div>
                 {{ end }}
+                <div class="col-md-3 p-3">
+                    <div class="reveal-paper-item bg-light" data-aos="fade-up">
+                        <span class="reveal-paper-item-title">
+                            <img src="/assets/images/pdf-icon.png" alt="pdf아이콘"
+                            class="custom-icon-16" style="height:auto; margin-right:1rem">
+                            외 기타 필요 문서
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="text-center" data-aos="fade-up">
+                        <span class="align-middle">*</span> 생성 문서는 회사의 정관, 선택 안건, 현재 회사 상태에 따라 자동으로 달라집니다.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
