--- a/themes/zuzu/layouts/partials/section/main/jumbotron-centered.html
+++ b/themes/zuzu/layouts/partials/section/main/jumbotron-centered.html
@@ -1,4 +1,4 @@
-<section class="bg-light">
+<section class="bg-dark">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6">
@@ -6,9 +6,8 @@
             </div>
             <div class="col-md-6">
                 <div class="main  text-left w-75 word-wrap">
-                    <img src={{.Site.Data.link.common.sparkle}} class="custom-icon-32" alt="sparkle" />
-                    <h1 class="main-title" class="text-left">{{.Params.title}}</h1>
-                    <h2 class="main-subtitle" style="color:#2E2E2E">{{.Params.subtitle}}</h2>
+                    <h1 class="main-title text-white">📚 {{.Params.title}}</h1>
+                    <h2 class="main-subtitle text-white" style="opacity: .72;">{{.Params.subtitle}}</h2>
                 </div>
             </div>
         </div>
