--- a/themes/zuzu/layouts/partials/section/agenda-support.html
+++ b/themes/zuzu/layouts/partials/section/agenda-support.html
@@ -4,7 +4,7 @@
         <div class="row">
             <h2 class="section-title">
                 <span class="underline-magical">
-                    지원하는 {{ .Title}}
+                    지원하는 {{ .Title}} 안건
                 </span>
             </h2>
             <h3 class="section-subtitle">{{.Params.supportAgendaSubtitle}}</h3>
