--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -35,7 +35,7 @@ h1 {
   font-size: 3.052rem;
   font-weight: 700;
   letter-spacing: -0.05rem;
-  color: #3d3d3c;
+  color: #3c3c3c;
 }
 
 h2 {
@@ -231,9 +231,9 @@ section .main-title {
   font-size: 3.052rem;
   font-weight: 900;
   letter-spacing: -0.04rem;
-  color: #3d3d3c;
+  color: #3c3c3c;
   line-height: 1.5;
-  color: #3d3d3c;
+  color: #3c3c3c;
   word-wrap: break-word;
 }
 
@@ -302,7 +302,7 @@ section .section-title {
   letter-spacing: -0.03rem;
   line-height: 1.75;
   text-align: center;
-  color: #3d3d3c;
+  color: #3c3c3c;
 }
 
 section .section-title-wrapper {
@@ -445,7 +445,7 @@ section.background-light {
   font-weight: 500;
   letter-spacing: -0.02rem;
   line-height: 1;
-  color: #3d3d3c;
+  color: #3c3c3c;
 }
 
 .panel-medium-subtitle {
@@ -884,7 +884,7 @@ nav.main-nav .active .nav-link {
   font-weight: 400;
   letter-spacing: -0.01rem;
   line-height: 1.75;
-  color: #3d3d3c;
+  color: #3c3c3c;
 }
 
 @media screen and (max-width: 600px) {
@@ -1367,7 +1367,7 @@ nav.main-nav .active .nav-link {
   font-weight: 500;
   letter-spacing: -0.01rem;
   line-height: 1.75;
-  color: #3d3d3c;
+  color: #3c3c3c;
   word-wrap: break-word;
   vertical-align: middle;
 }
@@ -1485,7 +1485,7 @@ footer .form-title {
   letter-spacing: -0.01rem;
   line-height: 1.75;
   margin-bottom: 0.5625rem;
-  color: #3d3d3c;
+  color: #3c3c3c;
 }
 
 @media screen and (max-width: 600px) {
@@ -1620,7 +1620,7 @@ footer .footer-group .footer-group-social-group-list p {
 
 footer .footer-group-title {
   margin-bottom: 0.375rem;
-  color: #3d3d3c;
+  color: #3c3c3c;
   font-size: 1rem;
   font-weight: 500;
   letter-spacing: -0.01rem;
