--- a/themes/zuzu/static/scss/abstract/_variable.scss
+++ b/themes/zuzu/static/scss/abstract/_variable.scss
@@ -21,7 +21,7 @@ $placeholder: rgba(0, 0, 0, 0.6);
 $popupBackground: rgba(0, 0, 0, 0.502);
 $secondaryButtonBackground: #fafbfc;
 $secondaryButtonStroke: rgba(27, 31, 35, 0.2);
-$subtitleText: #3d3d3c;
+$subtitleText: #3c3c3c;
 $tableHeader: #535353;
 $tableBackground: #f2f2f2;
 $borderColor: #e3e3e3;
