--- a/themes/zuzu/layouts/partials/section/agenda-support.html
+++ b/themes/zuzu/layouts/partials/section/agenda-support.html
@@ -78,7 +78,7 @@
                         <span class="reveal-paper-item-title">
                             <img src="/assets/images/pdf-icon.png" alt="pdf아이콘"
                             class="custom-icon-16" style="height:auto; margin-right:1rem">
-                            외 기타 필요 문서
+                            기타 필요 문서
                         </span>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <p class="text-center" data-aos="fade-up">
-                        <span class="align-middle">*</span> 생성 문서는 회사의 정관, 선택 안건, 현재 회사 상태에 따라 자동으로 달라집니다.
+                        <span class="align-middle">*</span> 생성 문서는 회사의 정관, 현재 회사 상태, 선택 안건에 따라 자동으로 달라집니다.
                     </p>
                 </div>
             </div>
