--- a/themes/zuzu/layouts/partials/section/voucher.html
+++ b/themes/zuzu/layouts/partials/section/voucher.html
@@ -8,14 +8,14 @@
                 주주가 비대면 바우처 공급 기업으로 선정되었어요 🎉
             </h5>
             <p class="panel-medium-subtitle">
-                비대면 바우처로 10배 이득인 법인 등기 시작해보세요.
+                비대면 바우처로 10배 이득인 법인 등기를 시작해보세요.
             </p>
         </div>
     </div>
     <div class="col-md-2">
-        <button class="button button-primary button-medium" onclick="window.open('voucher/')">
+        <a class="button button-primary button-medium text-white no-underline" href={{"voucher/" | absURL }}>
             <span>쿠폰 구매하기</span>
             <i data-feather="chevron-right" width="16"></i>
-        </button>
+        </a>
     </div>
 </div>
