--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -553,6 +553,13 @@ a.no-decoration:hover, footer .footer-group-list a:hover, footer .footer-group-s
   }
 }
 
+@media screen and (max-width: 600px) {
+  .button-large.down-sm-width-100 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
 .button-medium {
   padding: 0.75rem 1.125rem;
   font-size: 1rem;
@@ -570,6 +577,8 @@ a.no-decoration:hover, footer .footer-group-list a:hover, footer .footer-group-s
 @media screen and (max-width: 600px) {
   .button-medium.down-sm-width-100 {
     padding: 1.125rem 1.6875rem;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -1118,7 +1127,7 @@ nav.main-nav .active .nav-link {
   font-weight: 700;
 }
 
-.custom-dropdown-menu .active {
+.custom-dropdown-menu .active.active {
   background-color: transparent;
   font-size: 1rem;
   font-weight: 500;
@@ -1127,8 +1136,17 @@ nav.main-nav .active .nav-link {
 }
 
 @media screen and (max-width: 600px) {
-  .custom-dropdown-menu .active {
+  .custom-dropdown-menu .active.active {
     font-size: 1.25rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .custom-dropdown-menu .active.active {
+    font-size: 1.563rem;
+    font-weight: 500;
+    letter-spacing: -0.02rem;
+    line-height: 2;
   }
 }
 
