--- a/themes/zuzu/layouts/index.html
+++ b/themes/zuzu/layouts/index.html
@@ -15,12 +15,12 @@
                     </h2>
 
                     <div class="row">
-                    <div class="d-flex align-items-center justify-content-center">
-                        <button class="button button-large button-secondary" onclick="window.open('https://legal-app.zuzu.network/login')">
+                    <div class="d-md-flex d-sm-flex-column align-items-center justify-content-center">
+                        <button class="down-sm-width-100 button button-large button-secondary" onclick="window.open('https://legal-app.zuzu.network/login')">
                             <span style="line-height:2.4rem">데모 체험하기</span>
                             <i data-feather="chevron-right" width="18" stroke-width="3"></i>
                         </button>
-                        <button class="button button-large button-primary" onclick="window.open('https://legal-app.zuzu.network/signup')">
+                        <button class="down-sm-width-100 button button-large button-primary" onclick="window.open('https://legal-app.zuzu.network/signup')">
                             <lottie-player src="/assets/animation/trophy.json" background="transparent" speed="1" loop
                                 autoplay class="lottie-player-24"></lottie-player>
                             <span>무료로 시작하기</span>
