--- a/themes/zuzu/layouts/partials/script.html
+++ b/themes/zuzu/layouts/partials/script.html
@@ -24,7 +24,6 @@
 <script src={{"/js/reveal.js" | relURL }} type="text/javascript"></script>
 
 
-
 <script>
   feather.replace();
   AOS.init({
@@ -35,4 +34,19 @@
     // Target your .container, .wrapper, .post, etc.
     $(".container, .col-md-12, .col-md-10").fitVids();
   });
+
+function isIE() {
+  const ua = window.navigator.userAgent; //Check the userAgent property of the window.navigator object
+  const msie = ua.indexOf('MSIE '); // IE 10 or older
+  const trident = ua.indexOf('Trident/'); //IE 11
+
+  return (msie > 0 || trident > 0);
+}
+
+//function to show alert if it's IE
+function ShowIEAlert(){
+  if(isIE()){
+     alert("주주 리걸은 인터넷 익스플로러를 지원하지 않아요. 크롬을 이용해주세요.");
+  }
+}
 </script>
