--- a/themes/zuzu/layouts/shortcodes/voucher/coupon.html
+++ b/themes/zuzu/layouts/shortcodes/voucher/coupon.html
@@ -19,7 +19,7 @@
                                 <div class="text-gradient mb-2">
                                     <h4>
                                         <b>
-                                            비대면 바우처 {{.value}}원 쿠폰
+                                            비대면 바우처 {{.value}}만원 쿠폰
                                         </b>
                                     </h4>
                                 </div>
