--- a/themes/zuzu/layouts/index.html
+++ b/themes/zuzu/layouts/index.html
@@ -6,7 +6,7 @@
                 <div class="col-md-12 text-center">
                     <div class="main-title-wrapper mb-2">
                         <img src={{.Site.Data.link.common.sparkle}} class="custom-icon-64" alt="sparkle" />
-                        <h1 class="main-title">주주 리걸과 함께라면 <span class="underline-magical">셀프 등기와 등기 대행</span> 모두 <br/> 전보다 훨씬 더 <span class="underline-magical">편리하고 투명</span>해질거예요</h1>
+                        <h1 class="main-title">submodule없음 주주 리걸과 함께라면 <span class="underline-magical">셀프 등기와 등기 대행</span> 모두 <br/> 전보다 훨씬 더 <span class="underline-magical">편리하고 투명</span>해질거예요</h1>
                         <img src={{.Site.Data.link.common.sparkle}} class="custom-icon-64 flip-horizontal"
                             alt="sparkle" />
                     </div>
@@ -28,11 +28,11 @@
                         </button>
                     </div>
                 </div>
-                    
+
                         {{- partial "section/main/feature.html" . -}}
-                    
+
                 </div>
-            </div>           
+            </div>
             <div class="row">
                 {{- partial "section/voucher.html" . -}}
             </div>
