--- a/themes/zuzu/layouts/partials/footer/footer.html
+++ b/themes/zuzu/layouts/partials/footer/footer.html
@@ -49,10 +49,10 @@
               이용약관 및 개인정보처리방침
             </li>
             <li class="footer-group-list">
-              <a target="_blank" href={{" term-and-privacy/term" | absURL}}
+              <a target="_blank" href={{"term-and-privacy/term" | relURL}}
                 title="이용약관">이용약관</a></li>
             <li class="footer-group-list">
-              <a target="_blank" href={{" term-and-privacy/privacypolicy" | absURL}} title="개인정보처리방침">개인정보처리방침</a>
+              <a target="_blank" href={{"term-and-privacy/privacypolicy" | relURL}} title="개인정보처리방침">개인정보처리방침</a>
             </li>
           </ul>
         </div>
