--- a/themes/zuzu/layouts/partials/section/voucher.html
+++ b/themes/zuzu/layouts/partials/section/voucher.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="col-md-2">
-        <a class="button button-primary button-medium text-white no-underline" href={{"voucher/" | absURL }}>
+        <a class="button button-primary button-medium text-white no-underline" href={{"voucher/" | relURL }}>
             <span>쿠폰 구매하기</span>
             <i data-feather="chevron-right" width="16"></i>
         </a>
